Started work on 2nd half of page.  Fixd alignment issue.

--- a/Project1/stylesheet.css
+++ b/Project1/stylesheet.css
@@ -112,8 +112,11 @@ option{
 /*END Modifiable Room Name Section Options*/
 
 #rolesAndColors{ /*Define total page width of Colors/Roles Divs*/
+    display: block;
     width: 80vw;
     margin: 0 auto;
+     /*Fixes alignment issue but not sure why auto height isn't work.  Could cause scaling issues down the road*/
+    height: 250px;
 }
 
 .rcTitles{
